--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ Custom nvbar color
           <tr>
             <th>State/ut</th>
             <th>confirmed</th>
-            <th>Actice</th>
+            <th>Active</th>
             <th>recovered</th>
             <th>takenAt</th>
             <th>deceased</th>
